🐍 Fix Python 3.13 Compatibility - Dynamic Keys & Version Pinning

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 # path/filename: /requirements/requirements.txt
 
 # AI Paper Trading Bot Requirements
-streamlit>=1.28.0
+streamlit>=1.28.0,<1.40.0
 yfinance>=0.2.18
 pandas>=2.0.0
 numpy>=1.24.0
