--- a/.env.template
+++ b/.env.template
@@ -1,12 +1,8 @@
-# Alpaca Paper Trading Environment Variables
-# Copy this file to .env and add your actual keys
+# Alpaca API Configuration
+ALPACA_API_KEY=your_api_key_here
+ALPACA_SECRET_KEY=your_secret_key_here
+ALPACA_BASE_URL=https://paper-api.alpaca.markets
+PAPER_TRADING=true
 
-ALPACA_API_KEY=your_alpaca_api_key_here
-ALPACA_SECRET_KEY=your_alpaca_secret_key_here
-
-# Instructions:
-# 1. Sign up at https://alpaca.markets
-# 2. Go to Paper Trading section
-# 3. Generate API Key and Secret
-# 4. Replace the values above with your actual keys
-# 5. Rename this file to .env
+# Google Cloud Project
+GOOGLE_CLOUD_PROJECT=your-project-id
